--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,13 @@ h1{
 }
 
 .p1{
-	background-color : light blue;
+	background-color : blue;
 }
 .p2{
 	background-color : white;
 }
 .p3{
-	background-color : light red;
+	background-color : red;
 }
 
 #calais{
