--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
 	font-family : arial;
-	background-color : black;
 }
 
 h1{
@@ -16,6 +15,9 @@ h1{
 }
 .p3{
 	background-color : red;
+}
+.p4{
+	background-color: green;
 }
 
 #calais{
