--- a/tp2/css/style.css
+++ b/tp2/css/style.css
@@ -25,7 +25,7 @@ table
 {
     border-collapse: collapse;
 }
-td, th /* Mettre une bordure sur les td et les th */
+td, th 
 {
     border: 1px solid black;
 }
@@ -48,38 +48,34 @@ form{
 	border-color:red;
 	border-width:5px 5px 5px 5px;
 	border-radius:5px;
+    width:auto;
 }
 
 @media (min-width:768px) and (max-width:979px) {
 
-div.imgcalais #calais{
-	display:block;
-	margin:auto;
-	height:400px;
-	width:400px;
-}
-
-
+    div.imgcalais #calais{
+        display:block;
+        margin:auto;
+        height:400px;
+        width:400px;
+    }
 }
 
 @media (min-width:481px) and (max-width:767px) {
-div.imgcalais #calais{
-	display:block;
-	margin:auto;
-	height:250px;
-	width:250px;
-}
-
+    div.imgcalais #calais{
+        display:block;
+        margin:auto;
+        height:250px;
+        width:250px;
+    }
 }
 
 @media	(max-width:480px) {
-div.imgcalais #calais{
-	display:block;
-	margin:auto;
-	height:100px;
-	width:100px;
-}
-
-
+    div.imgcalais #calais{
+        display:block;
+        margin:auto;
+        height:100px;
+        width:100px;
+    }
 }
 
