--- a/tp2/css/style.css
+++ b/tp2/css/style.css
@@ -48,10 +48,13 @@ form{
 	border-color:red;
 	border-width:5px 5px 5px 5px;
 	border-radius:5px;
-    width:auto;
 }
 
 @media (min-width:768px) and (max-width:979px) {
+    form{
+        height:auto;
+        width:auto;
+    }
 
     div.imgcalais #calais{
         display:block;
@@ -62,6 +65,10 @@ form{
 }
 
 @media (min-width:481px) and (max-width:767px) {
+    form{
+        height:auto;
+        width:auto;
+    }
     div.imgcalais #calais{
         display:block;
         margin:auto;
@@ -71,6 +78,10 @@ form{
 }
 
 @media	(max-width:480px) {
+    form{
+        height:auto;
+        width:auto;
+    }
     div.imgcalais #calais{
         display:block;
         margin:auto;
