--- a/tp2/css/style.css
+++ b/tp2/css/style.css
@@ -1,16 +1,24 @@
-
+/*----------------------Général--------------*/
 body {
 	font-family : arial;
 	color: black;
 }
-
+strong{
+    font-size:1.5em;
+}
+/*----------------------Titres--------------*/
 h1{
 	font-family : verdana;
-	font-size :20px;
+	font-size :3em;
 	color: darkblue;
 	text-align:center;
 }
-
+h2{
+	font-family : verdana;
+	text-align:center;
+    font-size:3em;
+}
+/*----------------------Paragraphes--------------*/
 .p1{
 	background-color : lightblue;
 }
@@ -21,6 +29,14 @@ h1{
 	background-color : darkred;
 	color:white;
 }
+/*----------------------Images--------------*/
+div.imgcalais #calais{
+	display:block;
+	margin:auto;
+	height:500px;
+	width:500px;
+}
+/*----------------------Tableaux--------------*/
 table
 {
     border-collapse: collapse;
@@ -30,63 +46,22 @@ td, th
     border: 1px solid black;
 }
 
-div.imgcalais #calais{
-	display:block;
-	margin:auto;
-	height:500px;
-	width:500px;
-}
-h2{
-	font-family : verdana;
-	text-align:center;
-}
 
-form{
-	display:block;
-	text-align:center;
-	border-style:dotted;
-	border-color:red;
-	border-width:5px 5px 5px 5px;
-	border-radius:5px;
-}
+/*----------------------Formulaires--------------*/
 
-@media (min-width:768px) and (max-width:979px) {
-    form{
-        height:25%;
-        width:25%;
-    }
 
-    div.imgcalais #calais{
-        display:block;
-        margin:auto;
-        height:400px;
-        width:400px;
+
+
+/*----------------MQ------------*/
+
+@media all and (max-width: 500px)
+{
+    p{
+        color: red; 
+        background-color: black;
+        font-size: 1.2em;
     }
 }
 
-@media (min-width:481px) and (max-width:767px) {
-    form{
-        height:25%;
-        width:25%;
-    }
-    div.imgcalais #calais{
-        display:block;
-        margin:auto;
-        height:250px;
-        width:250px;
-    }
-}
 
-@media	(max-width:480px) {
-    form{
-        height:25%;
-        width:25%;
-    }
-    div.imgcalais #calais{
-        display:block;
-        margin:auto;
-        height:100px;
-        width:100px;
-    }
-}
 
