--- a/exo5/css/style.css
+++ b/exo5/css/style.css
@@ -8,23 +8,37 @@ header{
 body {
 	color: black;
     margin:auto;
+    width:100%;
 }
 footer{
     border-top: 3px ridge darkred;
     text-align:right;
 }
+p{
+    width:100%;
+}
 h1{
     font-size:3em;
+    color:whitesmoke;
+}
+h2{
+    font-size:2em;
 }
 
 /*--------------Menu---------------*/
-.menu { /*ajout de la bande en fond*/
+.menu {                             /*ajout de la bande en fond*/
     overflow: hidden;
     background-color: darkred;
+    display:block;
+}
+div.menu #fleur{
+    width:75px;
+    height: 75px;
 }
 
 .menu a {/* Style des 3 liens du menu */
-    float: right;
+    border-left: 1px ridge whitesmoke;
+    float:right;
     display: block;
     color: whitesmoke;
     text-align: center;
@@ -37,7 +51,7 @@ h1{
     background-color: #ddd;
     color: black;
 }
-/* Style dans la bar de navigationr */
+/* Style dans la barre de recherche */
 .menu input[type=text] {
     float: right;
     padding: 6px;
@@ -46,44 +60,111 @@ h1{
     margin-right: 16px;
     font-size: 17px;
 }
-
+div.menu .fleur #fleur{ /*logo en haut a gauche*/
+    float:left;
+    margin-left:5px;
+}
+div.menu .fleur h1{ /*titre*/
+    text-align: center;
+    padding-bottom: 25px;
+    margin-bottom: 5px;
+    border-bottom: 1px ridge whitesmoke;
+}
 /*--------------Images-------------*/
 div.logotake #take{
     height:100px;
     width:100px;
 }
-
-div.unada {
-    padding-top:25px;
-    margin: 0 auto;
-    
+div.grpphoto{  /*grp de photo du paragraphe 1*/
+    text-align: center;
 }
 
+div.grpphoto li{
+    display: inline-block;
+}
+div.grpphoto #photo1{
+    display: inline-block;
+    margin: 20px;
+    width:50%;
+}
+div.grpphoto #photo2{
+    display: inline-block;
+    margin: 20px;
+    width:50%;
+}
+div.grpphoto #photo3{
+    display: inline-block;
+    margin: 20px;
+    width:50%;
+}
+div.grpphoto #photo4{
+    display: inline-block;
+    margin: 20px;
+    width:50%;
+}
 
+div.unada {
+    display:block;
+    padding-top:25px;
+    text-align: center;
+    margin: auto;  
+}
+
+div.map{
+    margin-right: 40em;
+    border-right: 0.2em black solid;
+}
+
+form{
+	display:block;
+	text-align:center;
+	border-style:ridge;
+	border-color:black;
+	border-width:2px 2px 2px 2px;
+	border-radius:5px;
+}
+div.grossediv{
+    display: inline-block;
+}
 /*---------------MQ------------*/
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 450px) {
     
 /*---------------General----------*/
     h1{
         font-size:2em;
     }
+    h2{
+        font-size:1.5;
+    }
 
 /*---------------Images-----------*/
 
+    div.unada {
+        width:100%;
+    }
+    div.unada #unada{
+        width:100%;
+    }
+    div.grpphoto{
+        display: inline-block;
+    }
 /*---------------Menu-------------*/
     .menu a, .menu input[type=text] {
-        float: none;
-        display: block;
         text-align: center;
         width: 100%;
-        margin: 0;
+        margin:auto;
         padding: 14px;
+        border-top: 1px ridge whitesmoke;
     }
     .menu input[type=text] {
         border: 2px 2px 2px 2px;
         border-style:ridge;
         border-color:black;
         box-sizing:border-box;
+    }
+    div.menu .fleur h1{
+        padding-bottom: 6px;
+        border:none;
     }
 }
